public/css/sales.css
.blank-row {
    margin-top: 15px;
    height: 5%;
    width: 100%;
    background-color: white;
    display: flex;  
}
.error-row {
    width: 50%;
    margin-left: 40%; 
    margin-right: 40%; /*50% or 45% or */
    z-index: 100 !important;
    background-color: #ffdddd;
    align-items: center;
    justify-content: center;
    border-radius: 7px;
    border-left: 10px solid #f44336;
    display: flex;
}
.msg_sales {
    color: black;
    font-size: 15px;
}
.error-row .fa-exclamation-circle {
    font-size: 21px;
    color:#f44336;
    padding-right: 8px;
}

.sales-table {
    border-collapse: collapse;
    width: 90%;
    -webkit-box-shadow: 0px 8px 15px -2px rgba(0,0,0,0.15); 
    box-shadow: 0px 8px 15px -2px rgba(0,0,0,0.15);
    margin-top: 3%;
}

.sales-table, th{
    border: 1px solid rgb(216, 216, 216);
    padding: 1%;
    text-align: center;
}

.sales-table, td {
    border-right: 1px solid rgb(216, 216, 216);
    padding: 2%;
    text-align: center;
    font-weight: 700;
}

.st-header-1 {
    width: 15%;
}

.st-header-2 {
    width: 30%;
}

.st-header-3 {
    width: 10%;
}

.st-header-4 {
    width: 6%;
}

.st-header-5 {
    width: 20%;
}

.st-header-6 {
    width: 10%;
}

.sales-table th {
    background-color: rgb(230, 230, 230);
}

.row-1 {
    width: 100%;
    /* background-color: red; */
    display:flex;
    flex-direction:row;
    align-items: center;
    justify-content: center;
    animation-name: flyFromUp;
    animation-duration: 0.8s;
}

.row-2 {
    width: 100%;
    /* background-color: gray; */
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 5%;
    animation-name: flyFromDown;
    opacity: 0%;
    animation-fill-mode: forwards;
    animation-delay: 0.4s;
    animation-duration: 0.8s;
} 

.grid-container{
    width: 97%;
    height: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 50% 50% 50% 50%;
    grid-row-gap: 10%;
}

.card-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 300px;
}

.card {
    width: 70%;
    height: 95%;
    -webkit-box-shadow: 10px 9px 15px -5px rgba(0,0,0,0.15); 
    box-shadow: 10px 9px 15px -5px rgba(0,0,0,0.15);
}

.item-image {
    width: 100%;
    height: 70%;
    object-fit: cover;
}

.item-name {
    font-size: 18px;
    font-weight: 700;
    margin-top: 3%;
    margin-left: 10%;
}

.item-quantity{
    font-size: 22px;
    font-weight: 600;
    margin-top: 3%; 
}

.card-row-1 {
    position: relative;
}

.three-dots {
    overflow: hidden;
    position: absolute;
    transform: translate(-170%, 40%);
    width: 7%;
    height: 15%;
    border-radius: 5px;
    outline: none;
    border: none;
    background:url(/res/threedot.png) no-repeat;
    background-position: center center;
    transition-duration: .40s;
    background-color: rgba(240, 240, 240, 0.534);
    background-size: 40%;
}

.three-dots:hover {
    background-color: rgb(240, 240, 240);
}

.card-row-2 {
    display: flex;
    padding-top: 2%;
}

.card-col-1 {
    width: 70%;
    position: relative;
}

.inner-row-1 {
    text-align: right;
    margin-left: 90%;
}

.inner-row-2 {
    display: flex;
    margin-top: 25%;
    margin-left: 10%;
    width: 150%;
}

.quantity-button {
    width: 25px;
    height: 25px;
    border-radius: 5px;
    border: 1px solid rgb(187, 187, 187);
    outline: none;
}

.quantity-button:hover {
    background-color: rgb(207, 207, 207);
}

#add-button {
    margin-left: 15%;
}

.row-3 {
    display: flex;
    height: 4.5%;
    flex-direction: row;
    justify-content: flex-end;
    width: 100%;
    margin-top: 13%;
    margin-bottom: 1%;
    padding-bottom: 2%;
}

.submit-button {
    width: 10%;
    height: 100%;
    border-radius: 50px;
    outline: none;
    border: none;
    background-color: #7FC7F3;
    font-family: "Raleway";
    font-style: normal;
    font-size: 16px;
    font-weight:500;
    color: white;
    margin-right: 5%;
}

.submit-button:hover {
    background-color: #40adf1;
}

.add-product-button {
    width: 10%;
    height: 100%;
    border-radius: 50px;
    outline: none;
    border: none;
    background-color: #7FC7F3;
    font-family: "Raleway";
    font-style: normal;
    font-size: 16px;
    font-weight:500;
    color: white;
    margin-right: 2%;

}

.add-product-button:hover {
    background-color: #40adf1;
}

.edit-button {
    border: none;
    background-color: white;
    outline: none;
    font-size: 16px;
    font-weight: 500;
    border-bottom: 1px solid gray;
    width: 50%;
    color: gray;
}

.edit-button:hover {
    color: black;
    cursor: hand;
}

.add-product-popup {
    overflow: auto;
    visibility: hidden;
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: rgba(121, 121, 121, 0.322);
    z-index: 10 !important;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.add-product-popup-form {
    width: 20%;
    height: 50%;
    border-radius: 10px;
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
}

.add-product-popup-form h1{
    margin-top: 5%;
}

.inner-add-form {
    width: 100%;
    overflow-y: scroll;
    display: flex;
    flex-direction: column;
    align-items: left;
    padding-top: 3%;
    height: 100%;
    position: relative;
}

.inner-add-form label {
    font-size: 22px;
    font-weight: 700;
    padding-left: 5%;
}

.add-input {
    font-size: 20px;
    padding: 8px 0px;
    border-radius: 50px;
    width: 85%;
    margin-left: 9%;
    margin-top: 1%;
    outline: none;
    border: 1px solid rgb(216, 216, 216);
    margin-bottom: 2%;
    text-indent: 20px;
}

.image-input {
    font-size: 18px;
    padding: 30px 0px;
    width: 85%;
    height: 100%;
    margin-left: 10%;
    box-sizing:border-box;
    margin-top: -6%;
    margin-bottom: 2%;
}

.ingredient-input {
    width: 100%;
    display: flex;
    padding-top: 5%;
}

.ingredient-input label{
    margin-top: 25%;
    font-weight: 300;
    font-size: 16px;
}

.ingredient-name{
    width: 80%;
}

.ingredient-name label {
    margin-left: 5%;
    margin-bottom: 5%;
}

.ingredient-qty {
    width: 20%;
}

.ingredient-add {
    margin-left: -5%;
    margin-top: 6%;
    margin-bottom: 7.25%;
    font-size: 18px;
}

.ingredient-name {
    font-size: 18px;
}

.submit-row {
    width: 100%;
    height: 80px;

}

.ingredient-submit {
    width: 30%;
    height: 50%;
    font-size: 16px;
    margin-top: 5%;
    margin-bottom: 50%;
    margin-left: 65%;

}

.edit-product {
    position: absolute;
    bottom: 0;
    left: 20;
    border: none;
    background-color: white;
    outline: none;
    font-size: 14px;
    font-weight: 500;
    border-bottom: 1px solid gray;
    color: gray;
}

.edit-product:hover {
    color: black;
}

.confirm-delete-popup {
    overflow: auto;
    visibility: hidden;
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: rgba(121, 121, 121, 0.322);
    z-index: 10 !important;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.confirm-delete-popup-form {
    width: 30%;
    height: 15%;
    border-radius: 10px;
    margin-top: -10%;
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
}

.confirm-delete-popup-form h1{
    margin-top: 5%;
    font-size: 22px;
}

.confirm-row {
    display: flex;
    width: 100%;
    height: 40%;
    justify-content: center;
    align-items: flex-end;
}

.cancel-button {
    height: 70%;
    width: 30%;
    font-size: 16px;
    font-weight: 600;
    color: white;
    border-radius: 50px;
    background-color: #f37f7f;
    outline: none;
    border: none;
    margin-right: 5%;
}

.confirm-button {
    height: 70%;
    width: 30%;
    font-size: 16px;
    font-weight: 600;
    color: white;
    border-radius: 50px;
    background-color: #7FC7F3;
    outline: none;
    border: none;
    margin-right: 5%;
}

.confirm-button:hover {
    background-color: #40adf1;
    cursor: hand;
}

.cancel-button:hover {
    background-color: #f14040;
    cursor: hand;
}

@media (-webkit-device-pixel-ratio: 1.25) {
    .inner-row-2 {
        margin-top: 40%;
        margin-left: 0%;
    }

    .card-container {
        height: 270px;
    }
    .quantity-button {
        width: 20px;
        height: 20px;
    }

    .item-name {
        font-size: 16px;
    }

    .item-quantity {
        font-size: 16px;
    }

    .sales-table td{
        font-size: 14px;
    }

    .sales-table th{
        font-size: 14px;
    }

    .sales-table {
        width: 80%;
    }

    .grid-container {
        width: 87%;
    }

    .st-header-4 {
        width: 8%;
    }
    .card {
        height: 90%;
    }

    .add-product-button {
        font-size: 14px;
    }

    .submit-button {
        font-size: 14px;
    }

    .edit-button {
        font-size: 14px;
    }

    .add-product-popup-form h1{
        font-size: 22px;
    }


    .inner-add-form label {
        font-size: 18px;
        font-weight: 700;
        padding-left: 10%;
    }
    
    .add-input {
        font-size: 18px;
        padding: 6px 0px;
    }
    
    .image-input {
        font-size: 16px;
    }
    
    .ingredient-input label{
        margin-top: 25%;
        font-weight: 300;
        font-size: 14px;
    }
    
    
    .ingredient-add {
        text-indent: 5px;
        font-size: 14px;
    }
    
    .ingredient-name {
        font-size: 14px;
    }

    .edit-product {
        font-size: 12px;
        left: 15;
    }

    .confirm-delete-popup-form h1{
        margin-top: 5%;
        font-size: 18px;
        margin-bottom: 2%;
    }

}

.make-visible {
    visibility: visible;
    animation-name: slowAppear;
    animation-duration: 0.4s;
}

.make-invisible {
    visibility: hidden;
    animation-name: slowAppear;
    animation-duration: 0.4s;
}

.remove {
    animation-name: exitToLeft;
    animation-duration: 0.8s;
    animation-fill-mode: forwards;
    pointer-events: none;
}

.appear {
    animation-name: enterFromRight;
    animation-duration: 0.8s;
    animation-fill-mode: forwards;
    pointer-events: all !important;
}

.disappear {
    opacity: 0;
}

.select-container {
    position: relative;
}

@keyframes flyFromRight {
    from {
        opacity: 0%;
        transform: translateX(10%);
    }
    to {
        opacity: 100%;
        transform: translateX(0%);
    }
}

@keyframes flyFromDown {
    from {
        opacity: 0%;
        transform: translateY(3%);
    }
    to {
        opacity: 100%;
        transform: translateY(0%);
    }
}

@keyframes flyFromUp {
    from {
        opacity: 0%;
        transform: translateY(-3%);
    }
    to {
        opacity: 100%;
        transform: translateY(0%);
    }
}

@keyframes slowAppear{
    from{
        opacity: 0%;
    }
    to {
        opacity: 100%;
    }
}

